# esp32_NTP

./: .clang-format  .gitignore  CMakeLists.txt  README.md  esp32_NTP.code-workspace  sdkconfig  sdkconfig.bak  sdkconfig.defaults  sdkconfig.old
.devcontainer/: devcontainer.json
components/app_ble/: CMakeLists.txt  Kconfig  app_ble.c  app_ble_bluedroid.c  app_ble_nimble.c
components/app_ble/include/: app_ble.h
components/app_sntp/: CMakeLists.txt  Kconfig  app_sntp.c
components/app_sntp/include/: app_sntp.h
components/app_spi/: CMakeLists.txt  Kconfig  app_spi.c
components/app_spi/include/: app_spi.h
components/app_spi/test/: CMakeLists.txt  test_aspi.c
components/app_spiflash/: CMakeLists.txt  Kconfig  app_spiflash.c
components/app_spiflash/include/: app_spiflash.h
components/app_spiflash/test/: CMakeLists.txt  test_aspiflash.c
components/app_wifi/: CMakeLists.txt  Kconfig  app_wifi.c
components/app_wifi/include/: app_wifi.h
components/button_events/: CMakeLists.txt  Kconfig  button_events.c
components/button_events/include/: button_events.h
main/: CMakeLists.txt  Kconfig.log_level  Kconfig.projbuild  main.c
puml/: able_states.puml
test/: CMakeLists.txt  sdkconfig  sdkconfig.defaults  sdkconfig.old
test/main/: CMakeLists.txt  Kconfig.projbuild  aspi_test.c
